syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.mymental";
option java_outer_classname = "MyMentalServiceImpl";

package MyMental; 

service MyMental {
rpc MentalAdvice( MentalIssue) returns (Advice) {}
}

message MentalIssue{
string mentalIssue = 1;
}
message Advice{
string advice= 1;
}



